Added in code and data for stacked area chart visual

--- a/BG-171-StackedArea/index.html
+++ b/BG-171-StackedArea/index.html
@@ -54,7 +54,7 @@
 <script src="https://d3js.org/d3.v7.min.js"></script>
 
 <!-- Visualization objects -->
-<script src="js/stackedAreaChart.js"></script>
+<script src="../Template/Template/js/stackedAreaChart.js"></script>
 <script src="js/timeline.js"></script>
 
 <!-- Load data, create visualizations -->
